FKDK-1112 Fix serach form position on mobile

--- a/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_responsive-header.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_responsive-header.scss
@@ -56,6 +56,7 @@
     left: 0;
     width: 100%;
     padding: 0 15px;
+    z-index: 1101;
 
     .form-control {
       border: 0;
